fast temp. fix: geopath buttons unavailable if desc content width is too high

--- a/tpl/stdstyle/css/powerTrail.css
+++ b/tpl/stdstyle/css/powerTrail.css
@@ -6,7 +6,7 @@
 */
 #powerTrailContentWraper {
     width: 780px;
-    overflow: hidden;
+    overflow: visible;
 }
 
 .info {
